# powerschedule

./: .gitignore  Cargo.toml  README.md  config.cpe.toml  config.example.toml  getclasses.py  input.example.csv  taken.example.txt
src/: class.rs  config.rs  data.rs  error.rs  main.rs  requirements.rs  schedule.rs  semester.rs
