[package]
name = "powerschedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
combinations = "0.1.0"
csv = "1.2.0"
enum-iterator = "1.4.1"
itertools = "0.11.0"
nom = "7"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.50"
toml = "0.8.2"
yansi = "1.0.0-rc.1"
